# chromsize

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
chromsize/: Cargo.toml
chromsize/bench/: bench.rs
chromsize/src/: cli.rs  lib.rs  main.rs  size.rs
py-chromsize/: Cargo.toml  pyproject.toml
py-chromsize/src/: lib.rs
