[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "py-chromsize"
description = "py bindings to chromsize"
authors = [{ name = "alejandrogzi", email = "alejandrxgzi@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/alejandrogz/chromsize"

[tool.maturin]
features = ["pyo3/extension-module"]
